# SupernovaOS

./: CMakeLists.txt  SUPERNOVA.slnx
CORE/: AP.ASM  CMakeLists.txt  CORE.vcxproj  CORE.vcxproj.filters
CORE/src/: console.c  console.h  core.c  core.h  intrinsic.c  intrinsic.h  main.c  stdio.h
CORE/src/acpi/: acpi.c  acpi.h  dsdt.c  dsdt.h  fadt.c  fadt.h
CORE/src/arch/: efer.h  ia32_msr.h  msr.h  processor.c  processor.h  rflag.h  tss.c  tss.h
CORE/src/async/: async.c  async.h
CORE/src/driver/ahci/: ahci.c  ahci.h  ata.c  ata.h
CORE/src/driver/disk/: disk.c  disk.h
CORE/src/driver/nvme/: nvme.c  nvme.h
CORE/src/driver/pci/: pci.c  pci.h  pcie.c  pcie.h
CORE/src/driver/scsi/: scsi.c  scsi.h  scsi_cmd.h
CORE/src/driver/usb/: usb_bulk.c  usb_bulk.h  usb_desc.c  usb_desc.h  usb_hid.c  usb_hid.h  usb_keyboard.c  usb_keyboard.h  usb_msc.c  usb_msc.h  usb_req.h
CORE/src/driver/xhci/: xhc_regs.h  xhc_ring.c  xhc_ring.h  xhc_trb.h  xhci.c  xhci.h  xhci_context.c  xhci_context.h  xhci_device.c  xhci_device.h  xhci_port.c  xhci_port.h
CORE/src/file/: pe32x.c  pe32x.h
CORE/src/fs/: part.c  part.h
CORE/src/fs/gpt/: gpt.c  gpt.h
CORE/src/fs/ntfs/: ntfs.c  (+7 more)
CORE/src/interrupt/: 8259a.c  8259a.h  apic.c  apic.h  interrupt.c  interrupt.h  syscall.c  syscall.h
CORE/src/memory/: memblk.c  memblk.h  paging.c  paging.h  prealloc.h  segment.c  segment.h  virtmem.c  virtmem.h
CORE/src/mm/: pmm.c  pmm.h  segment.c  vmm.c  vmm.h
CORE/src/proc/: proc.c  proc.h
CORE/src/smp/: smp.c  smp.h
CORE/src/std/: sal.h  sprintf.c  stddef.h  stdint.h  stdio.c  stdio.h  string.c  string.h  types.h  vcruntime.h
CORE/src/timer/: 8254.h  hpet.c  hpet.h  rtc.c  rtc.h  timer.c  timer.h
CORE/src/user/: user.c  user.h
EFI/: CMakeLists.txt  DOS.ASM  EFI.vcxproj  EFI.vcxproj.filters
EFI/src/: acpi.h  ahci.c  ahci.h  consl.c  consl.h  intrinsic.c  intrinsic.h  main.c  ntfs.c  ntfs.h  pci.c  pci.h  pcie.h  uefi.c  uefi.h
(+15 files in other folders)
