cmake_minimum_required(VERSION 3.25)

project(CORE)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_FLAGS "")
set(CMAKE_CXX_FLAGS "")
set(CMAKE_SHARED_LINKER_FLAGS "")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_CURRENT_SOURCE_DIR})

file(GLOB_RECURSE SRC_FILES src/*.c)

include_directories(src)

add_library(CORE SHARED ${SRC_FILES})

set_target_properties(CORE PROPERTIES
	SUFFIX ".DLL"
)

target_compile_options(CORE PUBLIC /GS- /Gz)
target_link_options(CORE PUBLIC
	/BASE:0xFFFF800000000000
	/MANIFEST:NO    # Anti .rsrc section
	/INCREMENTAL:NO
	/MANIFESTUAC:NO
	/NXCOMPAT:NO
	/NODEFAULTLIB
	/ALIGN:16
	/MERGE:.text=TEXT
	/MERGE:.rdata=TEXT
	/MERGE:.pdata=TEXT
	/MERGE:.data=TEXT
	/STUB:"${CMAKE_CURRENT_SOURCE_DIR}/DOS.EXE"
)
