cmake_minimum_required(VERSION 3.25)

project(EFI)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_FLAGS "")
set(CMAKE_CXX_FLAGS "")
set(CMAKE_SHARED_LINKER_FLAGS "")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_CURRENT_SOURCE_DIR})

file(GLOB_RECURSE SRC_FILES src/*.c)

include_directories(src)

add_library(BOOTX64 SHARED ${SRC_FILES})

set_target_properties(BOOTX64 PROPERTIES
	SUFFIX ".EFI"
)

target_compile_options(BOOTX64 PUBLIC /GS- /Gz /Od)
target_link_options(BOOTX64 PUBLIC
	/MANIFEST:NO    # Anti .rsrc section
	/INCREMENTAL:NO
	/MANIFESTUAC:NO
	/NXCOMPAT:NO
	/NODEFAULTLIB
	/ALIGN:16
	/SUBSYSTEM:EFI_APPLICATION
	/ENTRY:EFIMainCRTStartup
	/MERGE:.text=TEXT
	/MERGE:.rdata=TEXT
	/MERGE:.pdata=TEXT
	/MERGE:.data=TEXT
	/STUB:"${CMAKE_CURRENT_SOURCE_DIR}/DOS.EXE"
)
